gitops/deployment-kotaemon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kotaemon
  namespace: geneva
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kotaemon
  template:
    metadata:
      labels:
        app: kotaemon
    spec:
      containers:
        - name: kotaemon
          image: 'image-registry.openshift-image-registry.svc:5000/geneva/kotaemon:latest'
          ports:
            - name: http  # Adding a name to the port
              containerPort: 7860
              protocol: TCP
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
